# FLuaG_rework

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindFontConfig.cmake  FindGLFW.cmake  FindLua.cmake  FindPangoCairo.cmake  FindSIMD.cmake  InstallEx.cmake  i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
docs/: CMakeLists.txt  interfaces.tex  lua.tex  lua_reference.tex  main.tex
examples/: filesystem.lua  font.lua  geometry.lua  gl.lua  gl1.lua  gl2.lua  math.lua  meta.lua  minimal.lua  minimal1.lua  minimal2.lua  png.lua  regex.lua  skeleton.lua  table.lua  utf8.lua
src/: CMakeLists.txt  FLuaG.cpp  FLuaG.hpp  FLuaG_image.cpp  avisynth.cpp  config.h.in  fluag.pc.in  public.c  public.cpp  public.h  resources.rc  vapoursynth.cpp
src/GL/: gl.c  gl.h  glfw.cpp  glfw.hpp
src/interfaces/: avisynth.cpp  public.cpp  public.h  vapoursynth.cpp
src/lualibs/: algorithm.cpp  filesystem.cpp  font.cpp  geometry.cpp  libs.h  mathex.cpp  mathx.cpp  png.cpp  regex.cpp  tableex.cpp  tablex.cpp  tga.cpp  tgl.cpp  utf8.cpp  utf8x.cpp
src/main/: FLuaG.cpp  FLuaG.hpp  FLuaG_image.cpp  resources.rc
src/utils/: font.hpp  imageop.hpp  log.cpp  log.hpp  lua.h  math.hpp  module.cpp  module.hpp  textconv.hpp  threading.hpp
tests/: dl.h  hello.c  image.cpp  standalone.c  vapoursynth.c
